--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:tools="http://schemas.android.com/tools">
+	xmlns:tools="http://schemas.android.com/tools"
+	package="com.protect.jikigo">
 
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -16,6 +17,7 @@
 		android:supportsRtl="true"
 		android:theme="@style/Theme.JikiGo"
 		tools:targetApi="31">
+
 		<!--		시작 로그인 액티비티     -->
 		<activity
 			android:name=".LoginActivity"
@@ -30,6 +32,24 @@
 			android:name=".HomeActivity"
 			android:exported="false"
 			android:windowSoftInputMode="adjustResize" />
+
+		<!-- 카카오 로그인 -->
+		<activity
+			android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
+			android:exported="true">
+			<intent-filter>
+				<action android:name="android.intent.action.VIEW" />
+
+				<category android:name="android.intent.category.DEFAULT" />
+				<category android:name="android.intent.category.BROWSABLE" />
+
+				<!-- 카카오 로그인 스킴 설정 -->
+				<data
+					android:host="oauth"
+					android:scheme="kakao${KAKAO_NATIVE_APP_KEY}" />
+			</intent-filter>
+
+		</activity>
 	</application>
 
 </manifest>
