--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,13 +3,18 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	package="com.protect.jikigo">
 
-	<uses-permission android:name="android.permission.INTERNET"/>
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-	<uses-permission android:name="android.permission.ACTIVITY_RECOGNITION"/>
-	<uses-permission android:name="android.permission.health.READ_STEPS"/>
-	<uses-permission android:name="android.permission.health.WRITE_STEPS"/>
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
+	<uses-permission android:name="android.permission.health.READ_STEPS" />
+	<uses-permission android:name="android.permission.health.WRITE_STEPS" />
+
+	<queries>
+		<package android:name="com.google.android.apps.healthdata" />
+	</queries>
 
 	<application
+		android:name=".App"
 		android:allowBackup="true"
 		android:dataExtractionRules="@xml/data_extraction_rules"
 		android:fullBackupContent="@xml/backup_rules"
@@ -17,30 +22,32 @@
 		android:label="@string/app_name"
 		android:roundIcon="@mipmap/ic_launcher_round"
 		android:supportsRtl="true"
-		android:name=".App"
 		android:theme="@style/Theme.JikiGo"
 		tools:targetApi="31">
-		<!--		시작 로그인 액티비티     -->
+
+		<!-- 시작 로그인 액티비티 -->
 		<activity
-			android:name=".LoginActivity"
+			android:name=".MainActivity"
 			android:exported="true">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<action android:name="androidx.health.ACTION_SHOW_PERMISSIONS_RATIONALE" />
+
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
 			<intent-filter>
-				<action android:name="android.intent.action.VIEW_PERMISSION_USAGE"/>
-				<category android:name="android.intent.category.HEALTH_PERMISSIONS"/>
+				<action android:name="android.intent.action.VIEW_PERMISSION_USAGE" />
+
+				<category android:name="android.intent.category.HEALTH_PERMISSIONS" />
 			</intent-filter>
 		</activity>
-
+		<activity
+			android:name=".LoginActivity"
+			android:exported="false" />
 		<activity
 			android:name=".HomeActivity"
 			android:exported="false"
-			android:windowSoftInputMode="adjustResize" />
-
-		<!-- 카카오 로그인 -->
+			android:windowSoftInputMode="adjustResize" /> <!-- 카카오 로그인 -->
 		<activity
 			android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
 			android:exported="true">
@@ -55,13 +62,7 @@
 					android:host="oauth"
 					android:scheme="kakao${KAKAO_NATIVE_APP_KEY}" />
 			</intent-filter>
-
 		</activity>
 	</application>
-
-	<queries>
-		<package android:name="com.google.android.apps.healthdata" />
-	</queries>
-
 
 </manifest>
