--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,8 @@
 		<!-- 시작 로그인 액티비티 -->
 		<activity
 			android:name=".MainActivity"
-			android:exported="true">
+			android:exported="true"
+			android:theme="@style/Theme.JikiGo.Splash">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<action android:name="androidx.health.ACTION_SHOW_PERMISSIONS_RATIONALE" />
