--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
 
 		<!-- 시작 로그인 액티비티 -->
 		<activity
-			android:name=".MainActivity"
+			android:name=".ui.activity.MainActivity"
 			android:exported="true"
 			android:theme="@style/Theme.JikiGo.Splash">
 			<intent-filter>
@@ -43,10 +43,10 @@
 			</intent-filter>
 		</activity>
 		<activity
-			android:name=".LoginActivity"
+			android:name=".ui.activity.LoginActivity"
 			android:exported="false" />
 		<activity
-			android:name=".HomeActivity"
+			android:name=".ui.activity.HomeActivity"
 			android:exported="false"
 			android:windowSoftInputMode="adjustResize" /> <!-- 카카오 로그인 -->
 		<activity
